--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,13 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
+Imports: 
+    bench,
+    car,
+    ggplot2
 Suggests: 
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
 VignetteBuilder: knitr
 Config/testthat/edition: 3
